--- a/Valentine1/package.json
+++ b/Valentine1/package.json
@@ -19,8 +19,8 @@
     "lucide-react": "^0.564.0",
     "next": "14.2.15",
     "radix-ui": "^1.4.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -38,6 +38,7 @@
   }
 
 }
+
 
 
 
