--- a/Valentine1/package.json
+++ b/Valentine1/package.json
@@ -20,14 +20,14 @@
     "next": "14.2.15",
     "radix-ui": "^1.4.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "14.2.15",
@@ -36,10 +36,4 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
-
 }
-
-
-
-
-
